--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script src="https://kit.fontawesome.com/26a741c736.js" crossorigin="anonymous"></script>
-    <title>Naaka</title>
+    <title>Nakaa</title>
   </head>
   <body>
     <div id="root"></div>
